--- a/requirements.txt
+++ b/requirements.txt
@@ -9,6 +9,7 @@ gunicorn==21.2.0
 inflection==0.5.1
 packaging==23.1
 Pillow==10.0.0
+psycopg2==2.9.6
 PyJWT==2.8.0
 python-decouple==3.8
 pytz==2023.3
