--- a/requirements.txt
+++ b/requirements.txt
@@ -1,20 +1,30 @@
 asgiref==3.7.2
+boto3==1.28.40
+botocore==1.31.40
 dj-database-url==2.1.0
 Django==4.2.4
 django-cors-headers==4.2.0
+django-smtp-ssl==1.0
+django-storages==1.14
 djangorestframework==3.14.0
 djangorestframework-simplejwt==5.3.0
 drf-yasg==1.21.7
 gunicorn==21.2.0
 inflection==0.5.1
+install==1.3.5
+jmespath==1.0.1
 packaging==23.1
 Pillow==10.0.0
 psycopg2==2.9.6
 PyJWT==2.8.0
+python-dateutil==2.8.2
 python-decouple==3.8
 pytz==2023.3
 PyYAML==6.0.1
+s3transfer==0.6.2
+six==1.16.0
 sqlparse==0.4.4
 typing_extensions==4.7.1
 uritemplate==4.1.1
+urllib3==1.26.16
 whitenoise==6.5.0
