modified aws static files configuration

--- a/military/.env
+++ b/military/.env
@@ -9,7 +9,7 @@ EMAIL_PORT=465
 EMAIL_HOST_USER=admin@andromedia.cc
 EMAIL_HOST_PASSWORD=33Defence.con
 EMAIL_USE_TLS=True
-DATABASE_URL=postgresql://postgres:HbtgRRE0wLP5ChiuQHZQ@containers-us-west-104.railway.app:7604/railway
+DATABASE_URL=postgresql://postgres:FG245A5A3CdbcgCfeA5EGffD44fGf55F@viaduct.proxy.rlwy.net:29302/railway
 RECIPIENT_ADDRESS=support@nanocodes.com.ng
 AWS_ACCESS_KEY_ID=AKIA2W5VIGQHMQVTU5OT
 AWS_SECRET_KEY=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
